--- a/account/templates/partials/navbar.html
+++ b/account/templates/partials/navbar.html
@@ -9,9 +9,9 @@
             <li><a href="{% url 'library:area_record' %}"><i class="fa fa-plus-circle"></i> Áreas</a></li>
         </ul>
         
-    <a href="{% url 'account:sign_in' %}">
+    <a href="{% url 'account:logout' %}">
         <button class="md:inline hidden bg-white text-neutral-900 hover:bg-gray-50 border border-gray-300 ml-20 px-9 py-2 rounded-full active:scale-95 transition-all">
-        Iniciar Sesión
+        Cerrar sesión
         </button>
         </a>
 
