--- a/account/templates/user/record.html
+++ b/account/templates/user/record.html
@@ -48,7 +48,7 @@ ul.errorlist li {
                 Usuarios
             </h2>
 
-            <a href="{% url 'library:area_create' %}"
+            <a href="{% url 'account:user_create' %}"
                class="px-5 py-2 bg-blue-700 text-white rounded-md text-sm font-semibold hover:bg-blue-800 transition">
                 + Crear Usuario
             </a>
@@ -64,7 +64,7 @@ ul.errorlist li {
                 </p>
 
                 <div class="flex gap-4">
-                    <a href="#"
+                    <a href="{% url 'account:user_update' user.id %}"
                        class="text-sm text-orange-600 font-semibold hover:underline">
                         Editar
                     </a>
